syntax = "proto3";

package remainder;

option go_package= "./pkg/pb/";

service remainderService {
    rpc TodayTask (todayTaskRequest) returns (todayTaskResponse) {}
}

message todayTaskRequest{
    string userID =1;
}

message todayTaskResponse{
    repeated string data = 1;
}